syntax = "proto3";

option csharp_namespace = "PracowniaProgramowaniaServer";

package serverService;

// The greeting service definition.
service PracowniaProgramowaniaServer {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc CreateBrand (CreateBrandRequest) returns (CreateBrandReply);
  rpc DeleteBrand (DeleteBrandRequest) returns (DeleteBrandReply);
  rpc ReadAllBrands (ReadAllBrandsRequest) returns (ReadAllBrandsReply);
  rpc ReadBrand (ReadBrandRequest) returns (ReadBrandReply);
  rpc UpdateBrand (UpdateBrandRequest) returns (UpdateBrandReply);

  rpc CreateRole (CreateRoleRequest) returns (CreateRoleReply);
  rpc DeleteRole (DeleteRoleRequest) returns (DeleteRoleReply);
  rpc ReadAllRoles (ReadAllRolesRequest) returns (ReadAllRolesReply);
  rpc ReadRole (ReadRoleRequest) returns (ReadRoleReply);
  rpc UpdateRole (UpdateRoleRequest) returns (UpdateRoleReply);

  rpc CreateTradeNote (CreateTradeNoteRequest) returns (CreateTradeNoteReply);
  rpc DeleteTradeNote (DeleteTradeNoteRequest) returns (DeleteTradeNoteReply);
  rpc ReadAllTradeNotes (ReadAllTradeNotesRequest) returns (ReadAllTradeNotesReply);
  rpc ReadTradeNote (ReadTradeNoteRequest) returns (ReadTradeNoteReply);
  rpc UpdateTradeNote (UpdateTradeNoteRequest) returns (UpdateTradeNoteReply);

  rpc CreateContact (CreateContactRequest) returns (CreateContactReply);
  rpc DeleteContact (DeleteContactRequest) returns (DeleteContactReply);
  rpc ReadAllContacts (ReadAllContactsRequest) returns (ReadAllContactsReply);
  rpc ReadContact (ReadContactRequest) returns (ReadContactReply);
  rpc UpdateContact (UpdateContactRequest) returns (UpdateContactReply);

  rpc CreateCompany (CreateCompanyRequest) returns (CreateCompanyReply);
  rpc DeleteCompany (DeleteCompanyRequest) returns (DeleteCompanyReply);
  rpc ReadAllCompanies (ReadAllCompaniesRequest) returns (ReadAllCompaniesReply);
  rpc ReadCompany (ReadCompanyRequest) returns (ReadCompanyReply);
  rpc UpdateCompany (UpdateCompanyRequest) returns (UpdateCompanyReply);

  rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
  rpc ReadAllUsers (ReadAllUsersRequest) returns (ReadAllUsersReply);
  rpc ReadUser (ReadUserRequest) returns (ReadUserReply);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message BrandField{
	int32 id = 1;
	string brandName = 2;
}

message RoleField{
	int32 id = 1;
	string roleName = 2;
}

message TradeNoteField{
	int32 id = 1;
	string content = 2;
	int32 connectedCompanyId = 3;
	int32 userAddingNoteId = 4;
	bool isDeleted = 5;
}

message ContactField{
	int32 id = 1;
	string name = 2;
	int32 connectedCompanyId = 3;
	int32 userAddingContactId = 4;
	string surname = 5;
	int32 phoneNumber = 6;
	string emailAddress = 7;
	string position = 8;
	bool isDeleted = 9;
}

message CompanyField{
	int32 id = 1;
	string companyName = 2;
	int32 brandId = 3;
	int32 userAddingCompanyId = 4;
	string nip = 5;
	string address = 6;
	bool isDeleted = 7;
}

message UserField{
	int32 id = 1;
	string login = 2;
	string password = 3;
	int32 roleID = 4;
	string name = 5;
	string surname = 6;
	string dateOfBirth = 7;
	bool isDeleted = 8;
}

message CreateBrandRequest{
	string brandName = 1;  
}

message CreateBrandReply{
	int32 brandId = 1;       
	string brandName = 2;
}

message DeleteBrandRequest{
	int32 brandId = 1;
}

message DeleteBrandReply{
	bool result = 1;
}

message ReadAllBrandsRequest{

}

message ReadAllBrandsReply{
	repeated BrandField allBrands = 1;
}

message ReadBrandRequest{
	int32 brandId = 1;
}

message ReadBrandReply{
	string brandDetails = 1;
}

message UpdateBrandRequest{
	BrandField updateBrand = 1;
}

message UpdateBrandReply{
	string updatedBrand = 1;
}



message CreateRoleRequest{
	string roleName = 1;  
}

message CreateRoleReply{
	int32 roleId = 1;      
	string roleName = 2;
}

message DeleteRoleRequest{
	int32 roleId = 1;
}

message DeleteRoleReply{
	bool result = 1;
}

message ReadAllRolesRequest{

}

message ReadAllRolesReply{
	repeated RoleField allRoles = 1;
}

message ReadRoleRequest{
	int32 roleId = 1;
}

message ReadRoleReply{
	string roleDetails = 1;
}

message UpdateRoleRequest{
	RoleField role = 1;
}

message UpdateRoleReply{
	string updatedRole = 1;
}


message CreateTradeNoteRequest{
	TradeNoteField tradeNote = 1;
}

message CreateTradeNoteReply{
	TradeNoteField newNote = 1;
}

message DeleteTradeNoteRequest{
	int32 tradeNoteId = 1;
}

message DeleteTradeNoteReply{
	string message = 1;
}

message ReadAllTradeNotesRequest{

}

message ReadAllTradeNotesReply{
	repeated TradeNoteField readAllTradeNotes = 1;
}

message ReadTradeNoteRequest{
	int32 tradeNoteId = 1;
}

message ReadTradeNoteReply{
	string tradeNoteDetails = 1;
}

message UpdateTradeNoteRequest{
	TradeNoteField tradeNote = 1;
}

message UpdateTradeNoteReply{
	string updatedTradeNote = 1;
}


message CreateContactRequest{
	ContactField contact = 1;
}

message CreateContactReply{
	ContactField newContact = 1;
}

message DeleteContactRequest{
	int32 contactId = 1;
}

message DeleteContactReply{
	string message = 1;
}

message ReadAllContactsRequest{

}

message ReadAllContactsReply{
	repeated ContactField allContacts = 1;
}

message ReadContactRequest{
	int32 id = 1;
}

message ReadContactReply{
	string contactDetails = 1;
}

message UpdateContactRequest{
	ContactField contact = 1;
}

message UpdateContactReply{
	string updatedContact = 1;
}



message CreateCompanyRequest{
	CompanyField company = 1;
}

message CreateCompanyReply{
	CompanyField newCompany = 1;
}

message DeleteCompanyRequest{
	int32 companyId = 1;
}

message DeleteCompanyReply{
	string message = 1;
}

message ReadAllCompaniesRequest{

}

message ReadAllCompaniesReply{
	repeated CompanyField readAllCompanies = 1;
}

message ReadCompanyRequest{
	int32 companyId = 1;
}

message ReadCompanyReply{
	string companyDetails = 1;
}

message UpdateCompanyRequest{
	CompanyField company = 1;
}

message UpdateCompanyReply{
	string updatedCompany = 1;
}


message CreateUserRequest{
	UserField user = 1;
}

message CreateUserReply{
	UserField newUser = 1;
}

message DeleteUserRequest{
	int32 id = 1;
}

message DeleteUserReply{
	string message = 1;
}

message ReadAllUsersRequest{
	
}

message ReadAllUsersReply{
	repeated UserField readAllUsers = 1;
}

message ReadUserRequest{
	int32 id = 1;
}

message ReadUserReply{
	string userDetails = 1;
}

message UpdateUserRequest{
	UserField user = 1;
}

message UpdateUserReply{
	string updatedUser = 1;
}


